--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -38,9 +38,9 @@
     </button>
   </ion-fab>
 
-  <ion-fab top left>
+  <!-- <ion-fab top left>
     <fake-customer></fake-customer>
-  </ion-fab>
+  </ion-fab> -->
 
   <ion-fab bottom right class="btn-menu">
     <button ion-fab (click)="onClickAddFab()">
